--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -10,18 +10,6 @@
         android:id="@+id/imageView3"
         android:layout_width="418dp"
         android:layout_height="277dp"
-        android:layout_marginTop="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/greenn" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="417dp"
-        android:layout_height="333dp"
-        android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,7 +17,7 @@
         app:srcCompat="@drawable/greenn" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/loginTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sign Up"
@@ -54,7 +42,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/passwordTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Email"
@@ -63,7 +51,7 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/email"
+            android:id="@+id/emailTb"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="8dp"
@@ -74,7 +62,6 @@
             android:inputType="textEmailAddress"
             android:padding="8dp"
             android:textColor="#347C17"
-            android:textColorHint="#050505"
             android:textSize="20dp" />
 
         <TextView
@@ -87,7 +74,7 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/password"
+            android:id="@+id/passwordTb"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="8dp"
@@ -101,72 +88,36 @@
             android:textColorHint="#131313"
             android:textSize="20dp" />
 
-        <LinearLayout
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/signUpBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:orientation="horizontal">
-
-            <View
-                android:id="@+id/view"
-                android:layout_width="wrap_content"
-                android:layout_height="1dp"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:background="#707070" />
-
-            <View
-                android:id="@+id/view2"
-                android:layout_width="wrap_content"
-                android:layout_height="1dp"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:background="#707070" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="349dp"
-            android:layout_height="66dp"
-            android:orientation="horizontal">
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@drawable/button_background"
-                android:text="SignUp"
-                android:textColor="#ffffff"
-                android:textSize="20dp" />
-
-        </LinearLayout>
+            android:layout_marginTop="20dp"
+            android:background="@drawable/button_background"
+            android:text="SignUp"
+            android:textColor="#ffffff"
+            android:textSize="20dp" />
 
         <TextView
             android:id="@+id/textView16"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:text="Already Have An Account?"
             android:textColor="#000000"
             android:textSize="18dp"
 
             />
 
-        <LinearLayout
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/loginBtn"
             android:layout_width="match_parent"
-            android:layout_height="51dp"
-            android:orientation="horizontal">
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@drawable/button_background"
-                android:text="Go To Login"
-                android:textColor="#ffffff"
-                android:textSize="20dp" />
-
-        </LinearLayout>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/button_background"
+            android:text="Go To Login"
+            android:textColor="#ffffff"
+            android:textSize="20dp" />
 
     </LinearLayout>
 
