--- a/app/src/main/res/layout/activity_find_learner.xml
+++ b/app/src/main/res/layout/activity_find_learner.xml
@@ -75,6 +75,11 @@
         android:text="Results:"
         android:textColor="#474747" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/learnerInfoRv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <androidx.cardview.widget.CardView
         android:id="@+id/learnerInformationCv"
         android:layout_width="match_parent"
