--- a/app/src/main/res/layout/activity_find_learner.xml
+++ b/app/src/main/res/layout/activity_find_learner.xml
@@ -80,7 +80,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <androidx.cardview.widget.CardView
+   <!-- <androidx.cardview.widget.CardView
         android:id="@+id/learnerInformationCv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -122,5 +122,5 @@
         </LinearLayout>
 
 
-    </androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>-->
 </LinearLayout>
