--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,5 +11,11 @@
         <item name="android:textColorHint">@color/green</item>
     </style>
 
+    <style name="ScreeningQuestions" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:layout_marginTop">4dp</item>
+
+    </style>
+
 
 </resources>
