--- a/app/src/main/res/layout/activity_find_learner.xml
+++ b/app/src/main/res/layout/activity_find_learner.xml
@@ -50,6 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="number"
+            android:textAlignment="center"
             android:textColor="@color/black" />
 
     </com.google.android.material.textfield.TextInputLayout>
