--- a/app/src/main/res/layout/activity_add_screening.xml
+++ b/app/src/main/res/layout/activity_add_screening.xml
@@ -102,7 +102,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="3dp"
             android:text="@string/q2.1"
-            app:switchPadding="20dp" />
+            app:switchPadding="20dp"
+            app:thumbTint="@color/green"/>
 
         <com.google.android.material.switchmaterial.SwitchMaterial
             android:id="@+id/qtn_2.2_s"
@@ -111,7 +112,8 @@
             android:layout_margin="3dp"
             android:text="@string/q2.2"
             app:switchPadding="20dp"
-            tools:ignore="VisualLintButtonSize" />
+            tools:ignore="VisualLintButtonSize"
+            app:thumbTint="@color/green"/>
 
         <com.google.android.material.switchmaterial.SwitchMaterial
             android:id="@+id/qtn_2.3_s"
@@ -119,7 +121,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="3dp"
             android:text="@string/q2.3"
-            app:switchPadding="20dp" />
+            app:switchPadding="20dp"
+            app:thumbTint="@color/green"/>
 
         <com.google.android.material.switchmaterial.SwitchMaterial
             android:id="@+id/qtn_2.4_s"
@@ -127,7 +130,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="3dp"
             android:text="@string/q2.4"
-            app:switchPadding="20dp" />
+            app:switchPadding="20dp"
+            app:thumbTint="@color/green"/>
 
         <com.google.android.material.switchmaterial.SwitchMaterial
             android:id="@+id/qtn_2.5_s"
@@ -135,7 +139,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="3dp"
             android:text="@string/q2.5"
-            app:switchPadding="20dp" />
+            app:switchPadding="20dp"
+            app:thumbTint="@color/green"/>
 
         <TextView
             android:id="@+id/throat_heading_tv"
@@ -158,7 +163,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="3dp"
             android:text="@string/q3.1"
-            app:switchPadding="20dp" />
+            app:switchPadding="20dp"
+            app:thumbTint="@color/green"/>
 
         <com.google.android.material.switchmaterial.SwitchMaterial
             android:id="@+id/qtn_3.2_s"
@@ -166,7 +172,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="3dp"
             android:text="@string/q3.2"
-            app:switchPadding="20dp" />
+            app:switchPadding="20dp"
+            app:thumbTint="@color/green"/>
 
         <com.google.android.material.switchmaterial.SwitchMaterial
             android:id="@+id/qtn_3.3_s"
@@ -175,7 +182,8 @@
             android:layout_margin="3dp"
             android:minHeight="48dp"
             android:text="@string/q3.3"
-            app:switchPadding="20dp" />
+            app:switchPadding="20dp"
+            app:thumbTint="@color/green"/>
 
         <com.google.android.material.switchmaterial.SwitchMaterial
             android:id="@+id/qtn_3.4_s"
@@ -191,7 +199,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="3dp"
             android:text="@string/q3.5"
-            app:switchPadding="20dp" />
+            app:switchPadding="20dp"
+            app:thumbTint="@color/green"/>
 
         <Button
             android:id="@+id/save_btn"
