--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/greenn"
     tools:context=".Login">
 
 
@@ -20,7 +21,7 @@
         android:id="@+id/loginTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login"
+        android:text="@string/login"
         android:textColor="#ffffff"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -44,76 +45,85 @@
             android:id="@+id/emailTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Email"
-            android:textColor="#000000"
-            android:textSize="20dp"
+            android:text="@string/email"
+            android:textColor="@color/green"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <EditText
             android:id="@+id/emailTb"
-            android:layout_width="match_parent"
+            android:layout_width="320dp"
             android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="24dp"
             android:background="@drawable/edit_text_back"
             android:ems="10"
-            android:hint="kacey@gmail.com"
+            android:hint="@string/email_example"
             android:inputType="textEmailAddress"
             android:padding="8dp"
             android:textColor="@color/green"
-            android:textSize="20dp" />
+            android:textSize="20sp"
+            android:autofillHints="" />
 
         <TextView
             android:id="@+id/passwordTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Password"
-            android:textColor="#000000"
-            android:textSize="20dp"
+            android:text="@string/password"
+            android:textColor="@color/green"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <EditText
             android:id="@+id/passwordTb"
-            android:layout_width="match_parent"
+            android:layout_width="320dp"
             android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="24dp"
             android:background="@drawable/edit_text_back"
             android:ems="10"
-
             android:inputType="textPassword"
             android:padding="8dp"
             android:textColor="#347C17"
             android:textColorHint="#040404"
-            android:textSize="20dp" />
+            android:textSize="20sp"
+            tools:ignore="SpeakableTextPresentCheck"
+            android:importantForAutofill="no" />
 
-        <androidx.appcompat.widget.AppCompatButton
+        <Button
             android:id="@+id/loginBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/button_background"
-            android:text="Login"
+            android:layout_width="320dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
+            android:backgroundTint="@color/green"
+            android:text="@string/login"
             android:textColor="#ffffff"
-            android:textSize="20dp" />
+            android:textSize="16sp"
+            app:cornerRadius="50dp" />
 
         <TextView
             android:id="@+id/createAccTv"
-            android:layout_width="match_parent"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
-            android:text="Dont Have An Acount?"
+            android:text="@string/don_t_have_an_account"
             android:textColor="#000000"
-            android:textSize="18dp" />
+            android:textSize="16sp" />
 
-        <androidx.appcompat.widget.AppCompatButton
+        <Button
             android:id="@+id/createAccBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="320dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="5dp"
-            android:background="@drawable/button_background"
-            android:text="Create an Acount"
+            android:backgroundTint="@color/green"
+            android:text="@string/create_an_account"
             android:textColor="#ffffff"
-            android:textSize="20dp" />
+            android:textSize="16sp"
+            app:cornerRadius="50dp" />
 
     </LinearLayout>
 
